# LogParser

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  run_build.bat
.github/workflows/: build.yml
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.h  PlusTabBar.cpp  PlusTabBar.h  TabsWidget.cpp  TabsWidget.h
src/core/: LogParser.cpp  LogParser.h  LogTableModel.cpp  LogTableModel.h  LogTailer.cpp  LogTailer.h  MultiFilterProxy.cpp  MultiFilterProxy.h
src/ui/: FirstNewRowDelegate.cpp  FirstNewRowDelegate.h  LogReaderTab.cpp  LogReaderTab.h  MessageDialog.cpp  MessageDialog.h
